<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robby_description</name>
  <version>0.0.0</version>
  <description>Robby's description</description>
  <maintainer email="christoph.hellmann@live.de">Christoph Hellmann Santos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>diff_drive_controller</depend>
  <depend>forward_command_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>teleop_twist_keyboard</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
